--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
             width: 100%;
             z-index: 1000;
             background-color: slateblue;
-            padding: 5px 20px; /* Adjusted padding for better alignment */
+            padding: 5px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 50px; /* Set a fixed height */
+            height: 50px;
         }
 
         .navbar a {
             color: white;
             text-decoration: none;
             font-size: 16px;
-            padding: 5px 10px; /* Adjusted padding for links */
+            padding: 5px 10px;
         }
 
         .navbar a.logo {
@@ -35,7 +35,7 @@
         }
 
         body {
-            margin-top: 50px; /* Match the navbar height */
+            margin-top: 50px;
         }
     </style>
 </head>
