--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section class="about" id="about">
   <h2>About Me </h2>
   <p>
-    I'm Suryaganthan, a passionate Cybersecurity student and aspiring Red Teamer. Currently pursuing B.Tech in Cybersecurity at Sri Eshwar College of Engineering, I specialize in penetration testing and ethical hacking.
+    I'm Suryaganthan, a passionate Cybersecurity student and aspiring Red Teamer. Currently pursuing B.E in Cybersecurity at Sri Eshwar College of Engineering, I specialize in penetration testing and ethical hacking.
   </p>
   <p>
     My areas of interest include:
