--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
 
 <section class="thm" id="thm">
   <h2> My TryHackMe Status</h2>
-  <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2870988" style='border:none;'></iframe>
+<div class="thm" style="padding: 10px; background-color: #f4f4f4; border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); text-align: center;">
+  <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2870988" style="border:none; margin-top: 10px;margin-left: 150px;"></iframe>
+</div>
+</div>
   <h2>Enhancing Cybersecurity Skills</h2>
   <style>
       .thm h2 {
