--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <li>Web Development & Automation</li>
   </ul>
 </section>
+<!-- thm-->
 
 <section class="thm" id="thm">
   <h2> My TryHackMe Status</h2>
